# MarketData

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
ingestion/: backfill.py  models.py  pipeline.py  storage.py  universe.py
ingestion/sources/: coingecko.py
tests/: test_ingestion.py
transform/: dbt_project.yml  profiles.yml
transform/models/staging/: schema.yml  sources.yml  stg_prices.sql
transform/seeds/: raw_prices_sample.csv
