[project]
name = "MarketData"
version = "0.1.0"
description = "Cryptocurrency Market Data Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
]
